[gd_scene load_steps=13 format=3 uid="uid://blpwf8jn4kels"]

[ext_resource type="PackedScene" uid="uid://f4xe44kpm4yv" path="res://Scenes/base_level.tscn" id="1_lle80"]
[ext_resource type="Script" path="res://Script/Level5/Level5.gd" id="2_67lcp"]
[ext_resource type="Script" path="res://Script/NPC3.gd" id="2_hianf"]
[ext_resource type="FontFile" uid="uid://bg7rgbk1qryj3" path="res://Assets/Font/ComputergamesOa.ttf" id="3_exia4"]
[ext_resource type="Script" path="res://Script/NPC4.gd" id="4_g00wh"]
[ext_resource type="PackedScene" uid="uid://cq8o6pe1corvu" path="res://Scenes/character.tscn" id="5_27qd5"]
[ext_resource type="PackedScene" uid="uid://bvk6j08vsquyt" path="res://Scenes/text_dialogs.tscn" id="5_bpah8"]
[ext_resource type="PackedScene" uid="uid://ctj4outslwg8k" path="res://Scenes/flag.tscn" id="6_h2l2n"]
[ext_resource type="Script" path="res://Script/NPC3_Dialog.gd" id="6_hs4br"]
[ext_resource type="PackedScene" uid="uid://cp5pv2x1d6hqe" path="res://Scenes/coin.tscn" id="7_g12jf"]
[ext_resource type="PackedScene" uid="uid://2my8jy8yfs5a" path="res://Scenes/key.tscn" id="8_hjv3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qe6c"]
size = Vector2(46, 50)

[node name="Base Level" instance=ExtResource("1_lle80")]
script = ExtResource("2_67lcp")

[node name="NPC3" parent="." index="7"]
script = ExtResource("2_hianf")

[node name="Area2D" type="Area2D" parent="NPC3" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC3/Area2D" index="0"]
shape = SubResource("RectangleShape2D_1qe6c")

[node name="Label" type="Label" parent="NPC3" index="1"]
visible = false
offset_left = -125.0
offset_top = -40.0
offset_right = 137.0
offset_bottom = -16.0
theme_override_fonts/font = ExtResource("3_exia4")
theme_override_font_sizes/font_size = 16
text = "Press E to interact with the NPC"

[node name="TextDialogs" parent="NPC3" index="2" instance=ExtResource("5_bpah8")]
script = ExtResource("6_hs4br")

[node name="NPC4" parent="." index="8"]
script = ExtResource("4_g00wh")

[node name="Area2D" type="Area2D" parent="NPC4" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC4/Area2D" index="0"]
shape = SubResource("RectangleShape2D_1qe6c")

[node name="Label" type="Label" parent="NPC4" index="1"]
visible = false
offset_left = -125.0
offset_top = -40.0
offset_right = 137.0
offset_bottom = -16.0
theme_override_fonts/font = ExtResource("3_exia4")
theme_override_font_sizes/font_size = 16
text = "Press E to interact with the NPC"

[node name="TextDialogs" parent="NPC4" index="2" instance=ExtResource("5_bpah8")]
script = ExtResource("6_hs4br")

[node name="Character" parent="." index="24" instance=ExtResource("5_27qd5")]

[node name="Time_out" type="Timer" parent="." index="25"]
wait_time = 90.0
one_shot = true

[node name="Flag" parent="." index="26" instance=ExtResource("6_h2l2n")]
position = Vector2(1059, -241)

[node name="Flag2" parent="." index="27" instance=ExtResource("6_h2l2n")]
position = Vector2(611, -33)

[node name="Flag3" parent="." index="28" instance=ExtResource("6_h2l2n")]
position = Vector2(207, -1)

[node name="coin" parent="." index="29" instance=ExtResource("7_g12jf")]
position = Vector2(579, 92)

[node name="coin2" parent="." index="30" instance=ExtResource("7_g12jf")]
position = Vector2(97, 81)

[node name="coin3" parent="." index="31" instance=ExtResource("7_g12jf")]
position = Vector2(476, 180)

[node name="coin4" parent="." index="32" instance=ExtResource("7_g12jf")]
position = Vector2(321, 101)

[node name="coin5" parent="." index="33" instance=ExtResource("7_g12jf")]
position = Vector2(1185, -82)

[node name="coin6" parent="." index="34" instance=ExtResource("7_g12jf")]
position = Vector2(1075, -2)

[node name="coin7" parent="." index="35" instance=ExtResource("7_g12jf")]
position = Vector2(1136, 164)

[node name="coin8" parent="." index="36" instance=ExtResource("7_g12jf")]
position = Vector2(841, 56)

[node name="Key" parent="." index="37" instance=ExtResource("8_hjv3e")]
position = Vector2(1160, 34)

[node name="Key2" parent="." index="38" instance=ExtResource("8_hjv3e")]
position = Vector2(513, 63)

[connection signal="body_entered" from="Ladder" to="Character" method="_on_ladder_body_entered"]
[connection signal="body_exited" from="Ladder" to="Character" method="_on_ladder_body_exited"]
[connection signal="body_entered" from="Ladder2" to="Character" method="_on_ladder_2_body_entered"]
[connection signal="body_exited" from="Ladder2" to="Character" method="_on_ladder_2_body_exited"]
[connection signal="body_entered" from="Ladder3" to="Character" method="_on_ladder_3_body_entered"]
[connection signal="body_exited" from="Ladder3" to="Character" method="_on_ladder_3_body_exited"]
[connection signal="body_entered" from="Ladder4" to="Character" method="_on_ladder_4_body_entered"]
[connection signal="body_exited" from="Ladder4" to="Character" method="_on_ladder_4_body_exited"]
[connection signal="body_entered" from="NPC3/Area2D" to="NPC3" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="NPC3/Area2D" to="NPC3" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="NPC4/Area2D" to="NPC4" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="NPC4/Area2D" to="NPC4" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Time_out" to="." method="_on_time_out_timeout"]
[connection signal="tree_exited" from="Key" to="NPC3" method="_on_key_tree_exited"]
[connection signal="tree_exited" from="Key2" to="NPC4" method="_on_key_2_tree_exited"]
